<resources>
    <string name="app_name">Events Mushroom</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="textoExemplo">We produce events, artists, and local brands, offering intelligent solutions for the artistic, digital and audiovisual market in Recife.</string>
    <string name="msgError">User error</string>
    <string name="orcamento">Budget</string>
    <string name="salvar">Save</string>
    <string name="cadastro">Create Account</string>
    <string name="email">E-mail</string>

</resources>