<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Tela2Activity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="92dp"
        android:layout_height="91dp"
        app:srcCompat="@drawable/icone"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="388dp"
        android:layout_height="79dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/alata"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/gray2"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="261dp"
        android:layout_height="87dp"
        android:fontFamily="@font/alata"
        android:text="@string/textoExemplo"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="302dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="84dp"
        android:backgroundTint="@color/veDark"
        android:text="@string/orcamento"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:layout_editor_absoluteY="466dp" />
</androidx.constraintlayout.widget.ConstraintLayout>