<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.CogumeloProdutora2.cadastroActivity"
    android:background="@color/gray">

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/veDark"
        android:text="Save"
        android:textColor="#FBF6F6"
        android:textColorHint="#100F0F"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="603dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="287dp"
        android:layout_height="43dp"
        android:autoSizeTextType="none"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteY="401dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="92dp"
        android:layout_height="91dp"
        app:srcCompat="@drawable/icone"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="289dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/alata"
        android:text="@string/cadastro"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="162dp"

        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:layout_editor_absoluteY="256dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="287dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteY="468dp" />

</androidx.constraintlayout.widget.ConstraintLayout>